--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="main.html">Главная</a></li>
-                <li><a href="#">Каталог</a></li>
+                <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="#">О нас</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
@@ -26,6 +26,7 @@
             <div class="title">Беспроводные наушники графити с RGB подсветкой</div>
             <div class="price">1146₴</div>
             <div class="out-of-stock">Нет в наличии</div>
+            <button>В корзину</button>
         </a>
         </div>
         <div class="product-card">
@@ -34,7 +35,9 @@
             <div class="title">Видеокарта ASUS PCI-Ex GeForce RTX 4060 Ti Dual EVO OC Edition</div>
             <div class="price">24 799₴</div>
             <div class="in-stock">Есть в наличии</div>
+            <button>В корзину</button>
         </a>
+        </div>
     </main>
     <footer>
        <P>&copy; 2025 TrendBay. <a href="privacy.html">Все права защищены.</a></P>
