--- a/catalog.html
+++ b/catalog.html
@@ -102,6 +102,15 @@
                         <button>В корзину</button><button>В Избраное</button>
                     </a>
                     </div>
+                    <div class="product-card">
+                        <a href="product.html">
+                        <img src="img/monitor.webp" alt="Видеокарта" height=310px >
+                        <div class="title">Монитор Samsung(не разбей меня пж)</div>
+                        <div class="price">10000₴</div>
+                        <div class="in-stock">Есть в наличии</div>
+                        <button>В корзину</button><button>В Избраное</button>
+                    </a>
+                    </div>
 
                 </div>
             </div>
