--- a/catalog.html
+++ b/catalog.html
@@ -30,31 +30,28 @@
             <div class="catalog-container">
                 <div class="catalog-filter">
                     <h2>Фильтры</h2>
-
+                    
                     <label>
                         <input type="checkbox" value="headphones"> 
                         Наушники
                     </label>
-                    <br>
                     <label>
                         <input type="checkbox" value="card"> 
                         Видеокарты
                     </label>
-                    <br>
                     <label>
                         <input type="checkbox" value="Microphone"> 
                         Микрофон
                     </label>
-                    <br>
                     <label>
                         <input type="checkbox" value="monitor"> 
                         Мониторы
                     </label>
-                    <br>
                     <label>
                         <input type="checkbox" value="proc"> 
                         Процессоры
                     </label>
+
                 </div>
                 <div class="catalog-product-list">
                     <div class="product-card">
@@ -111,7 +108,24 @@
                         <button>В корзину</button><button>В Избраное</button>
                     </a>
                     </div>
-
+                    <div class="product-card">
+                        <a href="product.html">
+                        <img src="img/monitor.webp" alt="Видеокарта" height=310px >
+                        <div class="title">Монитор Samsung(не разбей меня пж)</div>
+                        <div class="price">10000₴</div>
+                        <div class="in-stock">Есть в наличии</div>
+                        <button>В корзину</button><button>В Избраное</button>
+                    </a>
+                    </div>
+                    <div class="product-card">
+                        <a href="product.html">
+                        <img src="img/monitor.webp" alt="Видеокарта" height=310px >
+                        <div class="title">Монитор Samsung(не разбей меня пж)</div>
+                        <div class="price">10000₴</div>
+                        <div class="in-stock">Есть в наличии</div>
+                        <button>В корзину</button><button>В Избраное</button>
+                    </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -119,5 +133,6 @@
     <footer>
         <P>&copy; 2025 TrendBay. <a href="privacy.html">Все права защищены.</a></P>
      </footer>
+
 </body>
 </html>
