--- a/main.html
+++ b/main.html
@@ -20,6 +20,25 @@
         </nav>
     </header>
     <main>
+        <div class="cartds">
+            <div class="product-card">
+                <a href="#">
+                <img src="img/head.jpg" alt="Наушники" >
+                <div class="title">Беспроводные наушники графити с RGB подсветкой</div>
+                <div class="price">1146₴</div>
+                <div class="out-of-stock">Нет в наличии</div>
+                <button>В корзину</button>
+            </a>
+            </div>
+            <div class="product-card">
+                <a href="#">
+                <img src="img/head.jpg" alt="Наушники" >
+                <div class="title">Беспроводные наушники графити с RGB подсветкой</div>
+                <div class="price">1146₴</div>
+                <div class="out-of-stock">Нет в наличии</div>
+                <button>В корзину</button>
+            </a>
+            </div>
         <div class="product-card">
             <a href="#">
             <img src="img/head.jpg" alt="Наушники" >
@@ -38,6 +57,52 @@
             <button>В корзину</button>
         </a>
         </div>
+        <div class="product-card">
+            <a href="#">
+            <img src="img/kards.jpeg" alt="Видеокарта" height=310px >
+            <div class="title">Видеокарта ASUS PCI-Ex GeForce RTX 4060 Ti Dual EVO OC Edition</div>
+            <div class="price">24 799₴</div>
+            <div class="in-stock">Есть в наличии</div>
+            <button>В корзину</button>
+        </a>
+        </div>
+        <div class="product-card">
+            <a href="#">
+            <img src="img/kards.jpeg" alt="Видеокарта" height=310px >
+            <div class="title">Видеокарта ASUS PCI-Ex GeForce RTX 4060 Ti Dual EVO OC Edition</div>
+            <div class="price">24 799₴</div>
+            <div class="in-stock">Есть в наличии</div>
+            <button>В корзину</button>
+        </a>
+        </div>
+        <div class="product-card">
+            <a href="#">
+            <img src="img/kards.jpeg" alt="Видеокарта" height=310px >
+            <div class="title">Видеокарта ASUS PCI-Ex GeForce RTX 4060 Ti Dual EVO OC Edition</div>
+            <div class="price">24 799₴</div>
+            <div class="in-stock">Есть в наличии</div>
+            <button>В корзину</button>
+        </a>
+        </div>
+        <div class="product-card">
+            <a href="#">
+            <img src="img/kards.jpeg" alt="Видеокарта" height=310px >
+            <div class="title">Видеокарта ASUS PCI-Ex GeForce RTX 4060 Ti Dual EVO OC Edition</div>
+            <div class="price">24 799₴</div>
+            <div class="in-stock">Есть в наличии</div>
+            <button>В корзину</button>
+        </a>
+        </div>
+        <div class="product-card">
+            <a href="#">
+            <img src="img/kards.jpeg" alt="Видеокарта" height=310px >
+            <div class="title">Видеокарта ASUS PCI-Ex GeForce RTX 4060 Ti Dual EVO OC Edition</div>
+            <div class="price">24 799₴</div>
+            <div class="in-stock">Есть в наличии</div>
+            <button>В корзину</button>
+        </a>
+        </div>
+    </div>
     </main>
     <footer>
        <P>&copy; 2025 TrendBay. <a href="privacy.html">Все права защищены.</a></P>
