--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <main>
-    <!--Что-то так хз--> 
+    <div class="login">
+        <!--Что-то так хз--> 
     <div class="login-conteiner">
         <h2>Авторизация</h2>
         <!--Форма Авторизации-->
@@ -24,6 +25,7 @@
             <button onclick="location.href='main.html'" class="login-button"> Войти</button>
         </form>
         <a href="forgot.html" class="forgot-password">Забыли пароль?</a>
+    </div>
     </div>
     </main>
 </body>
