--- a/catalog.html
+++ b/catalog.html
@@ -60,7 +60,7 @@
                         <div class="title">Беспроводные наушники графити с RGB подсветкой</div>
                         <div class="price">1146₴</div>
                         <div class="out-of-stock">Нет в наличии</div>
-                        <button>В корзину</button><button>В Избраное</button>
+                        <button><a href="basket.html">В корзину</a></button><button>В Избраное</button>
                     </a>
                     </div>
                     <div class="product-card">
@@ -69,7 +69,7 @@
                         <div class="title">Видеокарта ASUS PCI-Ex GeForce RTX 4060 Ti Dual EVO OC Edition</div>
                         <div class="price">24 799₴</div>
                         <div class="in-stock">Есть в наличии</div>
-                        <button>В корзину</button><button>В Избраное</button>
+                        <button><a href="basket.html">В корзину</a></button><button>В Избраное</button>
                     </a>
                     </div>
                     <div class="product-card">
@@ -78,7 +78,7 @@
                         <div class="title">Микрофон Hator Signify RGB (HTA-510) </div>
                         <div class="price">2 199₴</div>
                         <div class="in-stock">Есть в наличии</div>
-                        <button>В корзину</button><button>В Избраное</button>
+                        <button><a href="basket.html">В корзину</a></button><button>В Избраное</button>
                     </a>
                     </div>
                     <div class="product-card">
@@ -87,7 +87,7 @@
                         <div class="title">  Процессор Intel Core i5-12400F 2.5GHz/18MB (BX8071512400F) s1700 BOX  </div>
                         <div class="price">5 299₴</div>
                         <div class="in-stock">Есть в наличии</div>
-                        <button>В корзину</button><button>В Избраное</button>
+                        <button><a href="basket.html">В корзину</a></button><button>В Избраное</button>
                     </a>
                     </div>
                     <div class="product-card">
@@ -96,7 +96,7 @@
                         <div class="title"> Процессор AMD Ryzen 5 5600 3.5GHz/32MB (100-100000927BOX) sAM4 BOX </div>
                         <div class="price">4 994₴</div>
                         <div class="out-of-stock">Нет в наличии</div>
-                        <button>В корзину</button><button>В Избраное</button>
+                        <button><a href="basket.html">В корзину</a></button><button>В Избраное</button>
                     </a>
                     </div>
                     <div class="product-card">
@@ -105,7 +105,7 @@
                         <div class="title">Монитор Samsung(не разбей меня пж)</div>
                         <div class="price">10000₴</div>
                         <div class="in-stock">Есть в наличии</div>
-                        <button>В корзину</button><button>В Избраное</button>
+                        <button><a href="basket.html">В корзину</a></button><button>В Избраное</button>
                     </a>
                     </div>
                     <div class="product-card">
@@ -114,7 +114,7 @@
                         <div class="title">Монитор Samsung(не разбей меня пж)</div>
                         <div class="price">10000₴</div>
                         <div class="in-stock">Есть в наличии</div>
-                        <button>В корзину</button><button>В Избраное</button>
+                        <button><a href="basket.html">В корзину</a></button><button>В Избраное</button>
                     </a>
                     </div>
                     <div class="product-card">
@@ -123,7 +123,7 @@
                         <div class="title">Монитор Samsung(не разбей меня пж)</div>
                         <div class="price">10000₴</div>
                         <div class="in-stock">Есть в наличии</div>
-                        <button>В корзину</button><button>В Избраное</button>
+                        <button><a href="basket.html">В корзину</a></button><button>В Избраное</button>
                     </a>
                     </div>
                 </div>
